--- a/RaspiProject/GrafanaAPI/GrafanaAPI.csproj
+++ b/RaspiProject/GrafanaAPI/GrafanaAPI.csproj
@@ -11,4 +11,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GrafanaAPI.Application.Core\GrafanaAPI.Application.Core.csproj" />
+    <ProjectReference Include="..\GrafanaAPI.Infrastructure.IoC\GrafanaAPI.Infrastructure.IoC.csproj" />
+  </ItemGroup>
+
 </Project>
