First api data gather 7 days forecast.

--- a/RaspiProject/GrafanaAPI/appsettings.Development.example.json
+++ b/RaspiProject/GrafanaAPI/appsettings.Development.example.json
@@ -1,6 +1,7 @@
 {
   "ApiOptions": {
-    "OpenWeatherMapApiKey": "your_key"
+    "OpenWeatherMapApiKey": "your_key",
+    "IconUrl": "http://openweathermap.org/img/wn/{0}@2x.png"
   },
   "Logging": {
     "LogLevel": {
