UTC as configurable value. Render 7h forecasts.

--- a/RaspiProject/GrafanaAPI/appsettings.Development.example.json
+++ b/RaspiProject/GrafanaAPI/appsettings.Development.example.json
@@ -1,7 +1,8 @@
 {
   "ApiOptions": {
     "OpenWeatherMapApiKey": "your_key",
-    "IconUrl": "http://openweathermap.org/img/wn/{0}@2x.png"
+    "IconUrl": "http://openweathermap.org/img/wn/{0}@2x.png",
+    "UtcOffset": 3
   },
   "Logging": {
     "LogLevel": {
